--- a/Deep_Learning_Classification_with_Tensor_flow_and_Keras.ipynb
+++ b/Deep_Learning_Classification_with_Tensor_flow_and_Keras.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1AbnqNrW5uu_9od6rw6rJyxP4dY6ImXY_",
-      "authorship_tag": "ABX9TyOuGv/pnHRV50XbUFz9MdU9",
+      "authorship_tag": "ABX9TyP9FYAtNavYHSIg66HcF5yB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3545,9 +3545,19 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "3KuvP4dsb7-4",
+        "colab_type": "text"
+      },
+      "source": [
+        "End of Notebook!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l--nweIQcoZr",
         "colab_type": "code",
         "colab": {}
       },
